# codexline

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js  sync-bridge-assets.js
npm/scripts/: prepare-packages.js  verify-release-assets.js
scripts/bridge/: README.md  install-bridge.ps1  install-bridge.sh  uninstall-bridge.ps1  uninstall-bridge.sh
src/: cli.rs  collect.rs  config.rs  context.rs  lib.rs  main.rs  patch_diagnose.rs  profiles.rs  render.rs  segments.rs  themes.rs  ui.rs
