[package]
name = "codexline"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Statusline tool for Codex workflows"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
indexmap = "=2.2.6"
ratatui = "0.26.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.12"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"

